--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@webgpu/types": "^0.1.22",
     "dat-gui": "^0.5.0",
-    "navigo": "^8.11.1"
+    "navigo": "^8.11.1",
+    "stats.js": "^0.17.0"
   }
 }
