--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@types/dat.gui": "^0.7.7",
+    "@types/stats.js": "^0.17.0",
     "@webgpu/types": "^0.1.24",
     "dat-gui": "^0.5.0",
     "dat.gui": "^0.7.9",
